Test Sandbox Project/src/objects/Training_Track__c.object
<CustomObject>
    <fields>
        <fullName>Achievement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Achievement will determine the badge displayed in the training track box and header</inlineHelpText>
        <label>Achievement</label>
        <referenceTo>Achievement__c</referenceTo>
        <relationshipLabel>Training Track</relationshipLabel>
        <relationshipName>Training_Track</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Background_Color__c</fullName>
        <inlineHelpText>HEX Color code for the header background color (e.g. #dcdcdc, more examples in : http://www.color-hex.com/)</inlineHelpText>
        <label>Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Image_URL__c</fullName>
        <inlineHelpText>URL for the image displayed in the training track detail header</inlineHelpText>
        <label>Background Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enable_all_external_accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enabling this checkbox will expose this training track to all external (Community/Portal) users</inlineHelpText>
        <label>Enable for all external accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Until__c</fullName>
        <inlineHelpText>Display a New ribbon in the training track until the specified date</inlineHelpText>
        <label>New Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Number that defines the position in which this track will appear in the tracks page</inlineHelpText>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Training tracks are not available to end users until they are &quot;Active&quot;</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Color__c</fullName>
        <inlineHelpText>HEX Color code for the header text color (e.g. #333333, more examples in : http://www.color-hex.com/)</inlineHelpText>
        <label>Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>Training Track</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Achievement__c</columns>
        <columns>Order__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Tracks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>